--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,5 +7,6 @@
 </head>
 <body>
    <h2> WELCOME BRO.....</h2>
+   <img src="{% static '/images/new.jpg' width='22px' %}"/>
 </body>
 </html>
